actualizacion de codigo

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -544,15 +544,49 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       PASAJEROS A BORDO  cantidad de fallecidos\n",
+      "count        4772.000000             4984.000000\n",
+      "mean           26.953688               22.351324\n",
+      "std            44.082868               35.039904\n",
+      "min             0.000000                0.000000\n",
+      "25%             3.000000                4.000000\n",
+      "50%            12.000000               11.000000\n",
+      "75%            30.000000               25.000000\n",
+      "max           614.000000              583.000000\n"
+     ]
+    }
+   ],
    "source": [
-    "hasta aquiiiiiii   preguntar cual debe ser el formato para analizar los datos y crear un dasboard en power bi"
+    "# Carga el archivo CSV limpio en un DataFrame de Pandas\n",
+    "df = pd.read_csv('AccidentesAviones_Limpio.csv')\n",
+    "\n",
+    "# Convierte la columna 'Fecha' en un objeto de fecha y maneja fechas incorrectas como valores nulos\n",
+    "df['Fecha'] = pd.to_datetime(df['Fecha'], errors='coerce')\n",
+    "\n",
+    "# Asegúrate de que las columnas 'PASAJEROS A BORDO' y 'cantidad de fallecidos' sean numéricas\n",
+    "df['PASAJEROS A BORDO'] = pd.to_numeric(df['PASAJEROS A BORDO'], errors='coerce')\n",
+    "df['cantidad de fallecidos'] = pd.to_numeric(df['cantidad de fallecidos'], errors='coerce')\n",
+    "\n",
+    "# Filtra los datos para incluir solo los años entre 1900 y 2022\n",
+    "df = df[(df['Fecha'].dt.year >= 1900) & (df['Fecha'].dt.year <= 2022)]\n",
+    "\n",
+    "# Realiza un análisis descriptivo básico de las columnas numéricas\n",
+    "descripcion = df[['PASAJEROS A BORDO', 'cantidad de fallecidos']].describe()\n",
+    "\n",
+    "print(descripcion)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
